[project]
name = "ap-testsuite"
version = "0.0.1"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "requests",
]

[project.scripts]
ap-test = "ap_test.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "*"
black = "*"
